[package]
name = "crawl"
version = "0.1.0"
edition = "2021"

[dependencies]
daemonize = "0.5.0"
libc = "0.2.147"
nix = "0.26.2"
reqwest = "0.11.18"
select = "0.6.0"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
